@@ -24,6 +24,7 @@ o Now default synchronization mode is ftfw instead of alarm
 o rename `examples' directory to `doc'
 o add support for related conntracks (requires Linux kernel >= 2.6.22)
 o show error and warning messages to stderr
+o hash lookup speedups based on comments from netdev's discussions
 
 version 0.9.5 (2007/07/29)
 ------------------------------
